<resources>
    <string name="app_name">Password Manager</string>
    <string name="password_length">Length</string>
    <string name="password_url">URL</string>
    <string name="name">Name</string>
    <string name="username">Username</string>
    <string name="generate_password_button_text">Generate</string>
    <string name="generated_password">Password</string>
    <string name="save_password_button_text">Save</string>
    <string name="save_preferred_password_length_button_text">Save preference</string>
    <string name="backup_button_text">Backup</string>
    <string name="title_activity_login">Sign in</string>
    <string name="password_list">Password List</string>
    <string name="load">Reload</string>
    <string name="update">Edit</string>
    <string name="delete">Delete</string>

    <string name="accessibility_service_description">AccessibilityService</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!--General-->
    <string name="selfpackagename">in.ac.iiitd.mt14033.passwordmanager</string>
    <string name="VTAG">PasswordManagerVerbose</string>
    <string name="PREFFERED_PASSWORD_LENGTH">Preferred_Password_Length</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="close">Close</string>
    <string name="ERROR_INVALID_URL">Invalid URL</string>

    <!--Dialog Generate Password-->
    <string name="dialog_genpass_title">Generate Password</string>
    <string name="dialog_genpass_hint_generated">GeneratedPass</string>
    <string name="dialog_genpass_hint_passlen">Password Length: </string>

    <!--Dialog Matching Logins-->
    <string name="matching_login_popup_content_description">matchingpasswordpopup</string>
    <string name="dialog_matching_title">Matching Logins</string>
    <string name="add_login_button_text">Add Login</string>
    <string name="matching_login_package_name">MatchingLoginsPackageName</string>
    <string name="matching_logins">Matching Logins</string>
</resources>
