<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <TextView
        android:text="@string/dialog_genpass_title"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:textAlignment="center"
        android:textSize="26dp"
        android:background="#FFFFBB33"
        android:contentDescription="@string/app_name" />
    <TextView
        android:id="@+id/dialog_genpass_generated_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textSize="22dp"
        android:textAlignment="center"
        android:layout_marginLeft="4dp"
        android:hint="@string/dialog_genpass_hint_generated"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"/>

    <TextView
        android:id="@+id/dialog_genpass_passlen"
        android:hint="@string/dialog_genpass_hint_passlen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"/>
    <SeekBar
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="60"
        android:progress="1"
        android:id="@+id/dialog_genpass_seek_plen" />

</LinearLayout>