<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="4dp"
    android:paddingRight="4dp"
    android:paddingTop="@dimen/activity_vertical_margin">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/name"
            android:layout_width="match_parent"
            android:id="@+id/add_login_name_tv"
            android:layout_height="wrap_content" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/add_login_name_tv"
            android:inputType="textUri"
            android:id="@+id/add_login_name_et"/>
        <TextView
            android:text="@string/password_url"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:id="@+id/add_login_url_tv"
            android:layout_below="@+id/add_login_name_et"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textUri"
            android:layout_below="@+id/add_login_url_tv"
            android:id="@+id/add_login_url_et"/>
        <TextView
            android:text="@string/username"
            android:id="@+id/add_login_username_tv"
            android:layout_width="wrap_content"
            android:layout_below="@+id/add_login_url_et"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_column="1" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:layout_below="@+id/add_login_username_tv"
            android:id="@+id/add_login_username_et"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/add_login_password_tv"
            android:layout_marginTop="4dp"
            android:text="@string/generated_password"
            android:layout_below="@+id/add_login_username_et" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:id="@+id/add_login_password_et_layout"
            android:layout_below="@+id/add_login_password_tv"
            android:layout_height="match_parent">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/add_login_password_et"
                android:inputType="textPassword"
                android:layout_weight="1" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/next"
                android:background="@null"
                android:onClick="generatePasswordTapped"
                android:id="@+id/add_login_generate_password_btn"
                android:layout_weight="1" />
        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_password_button_text"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="4dp"
            android:layout_below="@+id/add_login_password_et_layout"
            android:id="@+id/add_login_save_login_btn" />

    </RelativeLayout>

</ScrollView>